# dvine_file_server

./: .gitignore  Cargo.toml  README.md  Rocket.toml  env
src/: main.rs
src/config/: mod.rs  nft_storage_api.rs
src/controller/: file_controller.rs  mod.rs
src/handlers/: error.rs
src/models/: file.rs
src/services/: file_service.rs  mod.rs  nft_storage_service.rs  s3_service.rs
src/utils/: file_util.rs
